booksireadbackend.dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booksireadbackend
spec:
  selector:
    matchLabels:
      app: booksireadbackend
  template:
    metadata:
      labels:
        app: booksireadbackend
    spec:
      containers:
      - name: bookireadbackend
        image: monyslim/booksireadbackend:1
        ports:
        - containerPort: 4343

---
apiVersion: v1
kind: Service
metadata:
  name: booksireadbackend
spec:
  selector:
    app: booksireadbackend
  ports:
  - port: 4343
    targetPort: 4343
