booksireadfrontend.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booksireadfrontend
spec:
  selector:
    matchLabels:
      app: booksireadfrontend
  template:
    metadata:
      labels:
        app: booksireadfrontend
    spec:
      restartPolicy: Always
      containers:
      - name: booksireadfrontend
        image: monyslim/booksireadfrontend:1
        ports:
        - containerPort: 3000


---
apiVersion: v1
kind: Service
metadata:
  name: booksireadfrontend
spec:
  type: LoadBalancer
  selector:
    app: booksireadfrontend
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 31010
