mongo-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-expresso
spec:
  selector:
    matchLabels:
      app: mongo-expresso
  template:
    metadata:
      labels:
        app: mongo-expresso
    spec:
      restartPolicy: Always
      containers:
      - name: mongo-expresso
        image: mongo-express
        resources:
          limits:
            memory: "600Mi"
            cpu: "600m"
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-expresso
spec:
  type: LoadBalancer
  selector:
    app: mongo-expresso
  ports:
  - port: 8081
    targetPort: 8081
    nodePort: 30000
