ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: birapp-ingress
  labels:
    name: birapp-ingress
spec:
  rules:
  - host: cyclo.com
    http:
      paths:
      - pathType: Prefix
        path: "/frontend"
        backend:
          service:
            name: booksireadfrontend
            port: 
              number: 3000
      - pathType: Prefix
        path: "/backend"
        backend:
          service:
            name: booksireadbackend
            port: 
              number: 4343
